--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,72 @@ body {
   margin: 0;
 }
 
+nav ul li a {
+  text-transform: uppercase;
+  border-bottom: solid 1px gainsboro;
+  border-top: solid 1px gainsboro;
+}
+nav ul li a:hover {
+  background-color: #c42d40;
+}
+
+.bright {
+  filter: brightness(35%);
+  height: 850px;
+  width: 100%;
+}
+
+h1 {
+  font-family: Courgette;
+}
+
+.margecenter {
+  margin-bottom: 15%;
+}
+
+span:first-of-type, span:nth-of-type(3), span:last-of-type {
+  font-size: 60px;
+}
+
+span:nth-of-type(2) {
+  color: #c42d40;
+  font-size: 60px;
+  text-transform: uppercase;
+}
+
+.btnbanner {
+  font-size: 30px;
+  text-transform: uppercase;
+}
+
+.deco {
+  background-image: url("../images/bottom_decoration_img.png");
+  background-repeat: repeat-x;
+  height: 10px;
+  width: 100%;
+  background-color: #545456;
+  margin-top: -5px;
+}
+
+@media (max-width: 552px) {
+  nav {
+    position: sticky !important;
+    background-color: black;
+  }
+  nav a {
+    margin-left: -25px;
+  }
+
+  .btnbanner2 {
+    margin-right: 18px;
+  }
+}
+@media (min-width: 552px) and (max-width: 768px) {
+  nav {
+    position: sticky !important;
+    background-color: black;
+  }
+}
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -10152,6 +10218,10 @@ h3 {
     color: inherit;
     border-color: #dee2e6;
   }
+}
+@font-face {
+  font-family: "Courgette";
+  src: url("../../public/fonts/Courgette-Regular.ttf");
 }
 /*!
  * Font Awesome Free 5.12.0 by @fontawesome - https://fontawesome.com
