--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,11 @@ body {
   margin: 0;
 }
 
+/*navbar*/
+nav {
+  position: absolute !important;
+  z-index: 1;
+}
 nav ul li a {
   text-transform: uppercase;
   border-bottom: solid 1px gainsboro;
@@ -12,25 +17,34 @@ nav ul li a:hover {
   background-color: #c42d40;
 }
 
+.test {
+  margin-left: 500px;
+}
+
+/*banner*/
+#rond {
+  border-radius: 100%;
+  height: 10px;
+  width: 10px;
+}
+
 .bright {
   filter: brightness(35%);
   height: 850px;
   width: 100%;
 }
 
-h1 {
-  font-family: Courgette;
-}
-
 .margecenter {
   margin-bottom: 15%;
 }
 
-span:first-of-type, span:nth-of-type(3), span:last-of-type {
+h1 {
+  font-family: Courgette;
+}
+h1 span:first-of-type, h1 span:nth-of-type(3), h1 span:last-of-type {
   font-size: 60px;
 }
-
-span:nth-of-type(2) {
+h1 span:nth-of-type(2) {
   color: #c42d40;
   font-size: 60px;
   text-transform: uppercase;
@@ -50,6 +64,103 @@ span:nth-of-type(2) {
   margin-top: -5px;
 }
 
+/*section1*/
+.bg {
+  background-image: url("../images/main_bg.jpg");
+  width: 100%;
+  height: 180vh;
+  display: flex;
+}
+
+.carre {
+  width: 80%;
+  height: 170vh;
+  background-color: white;
+  margin: auto;
+  position: relative;
+}
+.carre #img1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.carre #img2 {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.carre #img3 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.carre #img4 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.carre h2 {
+  font-family: Courgette;
+}
+.carre h2 span:first-of-type {
+  text-transform: uppercase;
+  color: #c42d40;
+  font-size: 50px;
+}
+.carre h2 span:last-of-type {
+  text-transform: capitalize;
+  font-size: 40px;
+}
+
+.row1 {
+  display: flex;
+}
+.row1 .col1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.row1 .col1 p {
+  margin: 50px 400px;
+}
+
+/*collapse*/
+.carre2 {
+  width: 80%;
+  height: 150px;
+  border-right: solid 1px gainsboro;
+  border-bottom: solid 1px gainsboro;
+  color: gainsboro;
+  margin: auto;
+}
+.carre2:focus {
+  border-right: solid 8px #c42d40;
+  color: #c42d40 !important;
+  outline: none;
+}
+
+.roundedimg {
+  width: 110px;
+  height: 110px;
+  border-radius: 100%;
+  margin: 30px;
+  border: solid 4px gainsboro;
+}
+
+.dollars {
+  width: 35px;
+  height: 25px;
+  background-color: gainsboro;
+  color: #c42d40;
+  padding-left: 3px;
+  margin: 60px 10px 10px 100px !important;
+}
+
+.point {
+  border-bottom: dotted 2px gainsboro;
+}
+
 @media (max-width: 552px) {
   nav {
     position: sticky !important;
@@ -62,11 +173,33 @@ span:nth-of-type(2) {
   .btnbanner2 {
     margin-right: 18px;
   }
+
+  .row1 .col1 h2 {
+    margin-top: 50px;
+  }
+  .row1 .col1 p {
+    margin: 10px 50px;
+  }
 }
 @media (min-width: 552px) and (max-width: 768px) {
   nav {
     position: sticky !important;
     background-color: black;
+  }
+
+  .row1 .col1 h2 {
+    margin-top: 50px;
+  }
+  .row1 .col1 p {
+    margin: 0;
+  }
+}
+@media (min-width: 768px) and (max-width: 1350px) {
+  .row1 .col1 h2 {
+    margin-top: 50px;
+  }
+  .row1 .col1 p {
+    margin: 30px 200px;
   }
 }
 /*!
