--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,9 @@
 body 
     margin: 0
+/*navbar*/
 nav
+    position: absolute!important
+    z-index: 1
     ul
         li 
             a 
@@ -9,21 +12,27 @@ nav
                 border-top: solid 1px gainsboro
             a:hover
                 background-color: rgb(196,45,64)
-
+.test
+    margin-left: 500px
+/*banner*/
+#rond
+    border-radius: 100%
+    height: 10px
+    width: 10px
 .bright
     filter: brightness(35%)
     height: 850px
     width: 100%
-h1
-    font-family: Courgette
 .margecenter
     margin-bottom: 15%
-span:first-of-type, span:nth-of-type(3) ,span:last-of-type
-    font-size: 60px
-span:nth-of-type(2)
-    color: rgb(196,45,64)
-    font-size: 60px
-    text-transform: uppercase
+h1
+    font-family: Courgette
+    span:first-of-type, span:nth-of-type(3) ,span:last-of-type
+        font-size: 60px
+    span:nth-of-type(2)
+        color: rgb(196,45,64)
+        font-size: 60px
+        text-transform: uppercase
 .btnbanner
     font-size: 30px
     text-transform: uppercase
@@ -34,6 +43,84 @@ span:nth-of-type(2)
     width: 100%
     background-color: rgb(84,84,86)
     margin-top: -5px
+/*section1*/
+.bg
+    background-image: url("../images/main_bg.jpg")
+    width: 100%
+    height: 180vh
+    display: flex
+.carre
+    width: 80%
+    height: 170vh
+    background-color: white
+    margin: auto
+    position: relative
+    #img1
+        position: absolute
+        top: 0
+        left: 0
+    #img2
+        position: absolute
+        top: 0
+        right: 0
+    #img3
+        position: absolute
+        bottom: 0
+        left: 0
+    #img4
+        position: absolute
+        bottom: 0
+        right: 0
+    h2
+        font-family: Courgette
+        span:first-of-type
+            text-transform: uppercase 
+            color: rgb(196,45,64)
+            font-size: 50px
+        span:last-of-type
+            text-transform: capitalize
+            font-size: 40px
+.row1
+    display: flex
+    .col1
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: center
+        p
+            margin: 50px 400px
+/*collapse*/
+.carre2
+    width: 80%
+    height: 150px
+    border-right: solid 1px gainsboro
+    border-bottom: solid 1px gainsboro
+    color: gainsboro
+    margin: auto
+
+    &:focus
+        border-right: solid 8px rgb(196,45,64)
+        color: rgb(196,45,64)!important
+        outline: none
+.roundedimg
+    width: 110px
+    height: 110px
+    border-radius: 100%
+    margin: 30px
+    border: solid 4px gainsboro
+.dollars
+    width: 35px
+    height: 25px
+    background-color: gainsboro
+    color: rgb(196,45,64)
+    padding-left: 3px
+    margin: 60px 10px 10px 100px!important
+
+.point
+    border-bottom: dotted 2px gainsboro
+
+
+
 
 @media (max-width:552px)
     nav
@@ -43,12 +130,32 @@ span:nth-of-type(2)
             margin-left: -25px
     .btnbanner2
         margin-right: 18px
+    .row1
+        .col1
+            h2 
+                margin-top: 50px
+            p 
+                margin: 10px 50px
 @media (min-width:552px) and (max-width:768px)
     nav
         position: sticky!important
         background-color: black
-                             
+    .row1
+        .col1
+            h2 
+                margin-top: 50px
+            p 
+                margin: 0
+@media (min-width:768px) and (max-width:1350px)
+    .row1
+        .col1
+            h2 
+                margin-top: 50px
+            p 
+                margin: 30px 200px
 
+
+        
 @import "./_variables"
 @import "../../node_modules/bootstrap/scss/bootstrap.scss"
 @import "./_fonts"
