--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,6 +174,55 @@ h2 span:last-of-type {
   background-position: center;
 }
 
+/*section2 form*/
+.bgform {
+  background-image: url("../images/book_table_bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.taille {
+  margin-top: 30px !important;
+  border-radius: 8px;
+}
+
+/*section2part2*/ 
+.imginsta {
+  width: 60%;
+  height: 60%;
+  border: solid 5px gainsboro;
+  border-radius: 20px !important;
+}
+
+.absol {
+  position: absolute;
+  bottom: 30%;
+}
+
+.marginzero {
+  margin: 30px !important;
+}
+
+.row2 {
+  display: flex;
+}
+.row2 .col2 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: no-wrap;
+}
+.row2 .col2 p {
+  margin: 0;
+}
+
+/* testimonials*/
+#bgtesti {
+  background-image: url("../images/testimonials_background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 @media (max-width: 552px) {
   body {
     margin: 0;
