--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -124,7 +124,40 @@ h2
     background-image: url("../images/team_background.jpg")
     background-repeat: no-repeat
     background-position: center
-    
+/*section2 form*/
+.bgform
+    background-image: url("../images/book_table_bg.jpg")
+    background-repeat: no-repeat
+    background-size: cover
+    background-position: center
+.taille
+    margin-top: 30px!important
+    border-radius: 8px
+/*section2part2*/ 
+.imginsta
+    width: 60%
+    height: 60%
+    border: solid 5px gainsboro
+    border-radius: 20px!important
+.absol
+    position: absolute
+    bottom: 30%
+.marginzero
+    margin: 30px!important
+.row2
+    display: flex
+    .col2
+        display: flex
+        flex-direction: column
+        flex-wrap: no-wrap
+        p
+            margin: 0
+/* testimonials*/
+#bgtesti
+    background-image: url("../images/testimonials_background.jpg")
+    background-repeat: no-repeat
+    background-size: cover
+
 
 
 @media (max-width:552px)
