--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,4 @@
 @charset "UTF-8";
-body {
-  margin: 0;
-}
-
 /*navbar*/
 nav {
   position: absolute !important;
@@ -223,6 +219,22 @@ h2 span:last-of-type {
   background-size: cover;
 }
 
+/*contact*/
+.bg2 {
+  background-image: url("../images/main_bg.jpg");
+  width: 100%;
+  height: 130%;
+}
+
+.roundedred {
+  border-radius: 15px;
+}
+
+.hr {
+  border: solid 5px grey;
+}
+
+/*footer*/
 @media (max-width: 552px) {
   body {
     margin: 0;
