--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,5 @@
-body 
-    margin: 0
+// body 
+//     margin: 0!important
 /*navbar*/
 nav
     position: absolute!important
@@ -157,6 +157,16 @@ h2
     background-image: url("../images/testimonials_background.jpg")
     background-repeat: no-repeat
     background-size: cover
+/*contact*/
+.bg2
+    background-image: url("../images/main_bg.jpg")
+    width: 100%
+    height: 130%
+.roundedred
+    border-radius: 15px
+.hr
+    border: solid 5px grey
+/*footer*/
 
 
 
