--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+body {
+  margin: 0;
+  padding: 0;
+}
+
 /*navbar*/
 nav {
   position: absolute !important;
@@ -231,10 +236,35 @@ h2 span:last-of-type {
 }
 
 .hr {
-  border: solid 5px grey;
+  border: solid 1px gainsboro;
+  opacity: 0.3;
+  width: 80%;
 }
 
 /*footer*/
+.bgfooter {
+  background-image: url("../images/footer_background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.decoftr {
+  background-image: url("../images/footer_bottom_decoration_img.png");
+  background-repeat: repeat-x;
+  height: 10px;
+  width: 100%;
+}
+
+.font {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-transform: uppercase !important;
+}
+
+.btnftr {
+  border: solid 1px gainsboro !important;
+}
+
+/*mediaquery*/
 @media (max-width: 552px) {
   body {
     margin: 0;
@@ -282,6 +312,7 @@ h2 span:last-of-type {
     margin: 30px 200px;
   }
 }
+/*import*/        
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
