--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,6 @@
-// body 
-//     margin: 0!important
+body 
+    margin: 0
+    padding: 0
 /*navbar*/
 nav
     position: absolute!important
@@ -165,11 +166,25 @@ h2
 .roundedred
     border-radius: 15px
 .hr
-    border: solid 5px grey
+    border: solid 1px gainsboro
+    opacity: 0.3
+    width: 80%
 /*footer*/
-
-
-
+.bgfooter
+    background-image: url("../images/footer_background.jpg")
+    background-repeat: no-repeat
+    background-size: cover
+.decoftr
+    background-image: url("../images/footer_bottom_decoration_img.png")
+    background-repeat: repeat-x
+    height: 10px
+    width: 100%
+.font
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif 
+    text-transform: uppercase!important
+.btnftr
+    border: solid 1px gainsboro!important
+/*mediaquery*/
 @media (max-width:552px)
     body 
         margin: 0
@@ -203,9 +218,7 @@ h2
                 margin-top: 50px
             p 
                 margin: 30px 200px
-
-
-        
+/*import*/        
 @import "./_variables"
 @import "../../node_modules/bootstrap/scss/bootstrap.scss"
 @import "./_fonts"
