--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,10 +1,13 @@
 body 
-    margin: 0
-    padding: 0
+    margin: 0!important
+.mzero
+    margin: 0!important
+    padding: 0!important
 /*navbar*/
 nav
     position: absolute!important
     z-index: 1
+    width: 100%
     ul
         li 
             a 
@@ -13,8 +16,6 @@ nav
                 border-top: solid 1px gainsboro
             a:hover
                 background-color: rgb(196,45,64)
-.test
-    margin-left: 500px!important
 /*banner*/
 #rond
     border-radius: 100%
@@ -43,16 +44,13 @@ h1
     height: 10px
     width: 100%
     background-color: rgb(84,84,86)
-    margin-top: -5px
 /*section1*/
 .bg
     background-image: url("../images/main_bg.jpg")
     width: 100%
-    height: 180vh
     display: flex
 .carre
     width: 80%
-    height: 170vh
     background-color: white
     margin: auto
     position: relative
@@ -83,17 +81,19 @@ h2
         font-size: 40px
 .row1
     display: flex
+    margin: 0!important
     .col1
         display: flex
         flex-direction: column
         align-items: center
         justify-content: center
+        padding: 0!important
         p
             margin: 50px 400px
 /*collapse*/
 .carre2
     width: 80%
-    height: 150px
+    height: auto
     border-right: solid 1px gainsboro
     border-bottom: solid 1px gainsboro
     color: gainsboro
@@ -106,7 +106,6 @@ h2
     width: 110px
     height: 110px
     border-radius: 100%
-    margin: 30px
     border: solid 4px gainsboro
 .point
     border-bottom: dotted 2px gainsboro
@@ -116,15 +115,13 @@ h2
     background-color: gainsboro
     color: rgb(196,45,64)
     padding-left: 3px   
-#lastbell
-    position: absolute
-    bottom: 10%
-    left: 33%
 /*section1 part2*/
 #bgteam
     background-image: url("../images/team_background.jpg")
     background-repeat: no-repeat
-    background-position: center
+    background-size: cover
+    .chef
+        width: auto
 /*section2 form*/
 .bgform
     background-image: url("../images/book_table_bg.jpg")
@@ -147,10 +144,12 @@ h2
     margin: 30px!important
 .row2
     display: flex
+    margin: 0!important
     .col2
         display: flex
         flex-direction: column
         flex-wrap: no-wrap
+        margin: 0!important
         p
             margin: 0
 /* testimonials*/
@@ -158,11 +157,11 @@ h2
     background-image: url("../images/testimonials_background.jpg")
     background-repeat: no-repeat
     background-size: cover
+    width: 100%
 /*contact*/
 .bg2
     background-image: url("../images/main_bg.jpg")
     width: 100%
-    height: 130%
 .roundedred
     border-radius: 15px
 .hr
@@ -184,14 +183,15 @@ h2
     text-transform: uppercase!important
 .btnftr
     border: solid 1px gainsboro!important
+/*fin*/
+#margright
+    margin: 10px!important
 /*mediaquery*/
 @media (max-width:552px)
     body 
         margin: 0
     nav
         margin-bottom: 0px
-        a 
-            margin-left: -25px
     .btnbanner2
         margin-right: 18px
     .row1
@@ -199,7 +199,22 @@ h2
             h2 
                 margin-top: 50px
             p 
-                margin: 10px 50px
+                margin: 0
+                padding: 40px
+    h1
+        font-size: 10px
+        span:first-of-type, span:nth-of-type(3) ,span:last-of-type
+            font-size: 20px
+        span:nth-of-type(2)
+            font-size: 20px
+    .btnbanner
+        font-size: 15px
+        text-transform: uppercase
+    .rond
+        width: 50px
+        height: 50px
+    .overflowbreakfast
+        overflow: auto
 @media (min-width:552px) and (max-width:768px)
     body 
         margin: 0
@@ -209,6 +224,19 @@ h2
                 margin-top: 50px
             p 
                 margin: 0
+    h1
+        font-size: 10px
+        span:first-of-type, span:nth-of-type(3) ,span:last-of-type
+            font-size: 20px
+        span:nth-of-type(2)
+            font-size: 20px
+    .btnbanner
+        font-size: 15px
+    .rond
+        width: 50px
+        height: 50px
+    .overflowbreakfast
+        overflow: auto
 @media (min-width:768px) and (max-width:1350px)
     body 
         margin: 0
@@ -218,6 +246,14 @@ h2
                 margin-top: 50px
             p 
                 margin: 30px 200px
+    .rond
+        width: 50px
+        height: 50px
+    .overflowbreakfast
+        overflow: auto
+@media (max-width:992px)
+    #margright
+        margin: 0!important
 /*import*/        
 @import "./_variables"
 @import "../../node_modules/bootstrap/scss/bootstrap.scss"
