--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,3 +1,7 @@
+/*variables*/ 
+$police : Courgette
+/*remplacement de la police par Courgette ou par monospace*/
+/*extra*/
 body 
     margin: 0!important
 .mzero
@@ -28,7 +32,7 @@ nav
 .margecenter
     margin-bottom: 15%
 h1
-    font-family: Courgette
+    font-family: $police
     span:first-of-type, span:nth-of-type(3) ,span:last-of-type
         font-size: 60px
     span:nth-of-type(2)
@@ -71,7 +75,7 @@ h1
         bottom: 0
         right: 0
 h2
-    font-family: Courgette
+    font-family: $police
     span:first-of-type
         text-transform: uppercase 
         color: rgb(196,45,64)
@@ -114,7 +118,7 @@ h2
     height: 25px
     background-color: gainsboro
     color: rgb(196,45,64)
-    padding-left: 3px   
+    padding-left: 3px
 /*section1 part2*/
 #bgteam
     background-image: url("../images/team_background.jpg")
@@ -133,13 +137,10 @@ h2
     border-radius: 8px
 /*section2part2*/ 
 .imginsta
-    width: 60%
-    height: 60%
     border: solid 5px gainsboro
     border-radius: 20px!important
 .absol
-    position: absolute
-    bottom: 30%
+    margin-top: -35px!important
 .marginzero
     margin: 30px!important
 .row2
@@ -215,6 +216,12 @@ h2
         height: 50px
     .overflowbreakfast
         overflow: auto
+    .wbell
+        width: 100%
+    .alignsm
+        align-items: center
+    .absol
+        font-size: 10px!important
 @media (min-width:552px) and (max-width:768px)
     body 
         margin: 0
@@ -237,6 +244,14 @@ h2
         height: 50px
     .overflowbreakfast
         overflow: auto
+    .wbell
+        width: 100%
+    .alignsm
+        align-items: center
+@media (min-width:774px) and (max-width:990px)
+    .alignsm
+        align-items: center
+
 @media (min-width:768px) and (max-width:1350px)
     body 
         margin: 0
@@ -254,6 +269,18 @@ h2
 @media (max-width:992px)
     #margright
         margin: 0!important
+    .bottomfemme
+        margin-bottom:15px!important
+    .topfemme
+        margin-top: 15px!important
+@media (min-width:992px) and (max-width:1160px)
+    #repnsmargftr
+        margin-bottom: 15px!important
+@media (min-width:761px) and (max-width:962px)
+    .absol
+        margin-top: -50px!important
+
+
 /*import*/        
 @import "./_variables"
 @import "../../node_modules/bootstrap/scss/bootstrap.scss"
