--- a/public/css/style.css
+++ b/public/css/style.css
@@ -263,8 +263,31 @@ h2 span:last-of-type {
 }
 
 /*fin*/
+/*ajout derniere minute*/
 #margright {
   margin: 10px !important;
+}
+
+input[type=date] {
+  color: white;
+}
+
+input[type=date]::before {
+  content: attr(placeholder) " : ";
+  white-space: pre;
+  color: black;
+  opacity: 0.5;
+}
+
+input[type=time] {
+  color: white;
+}
+
+input[type=time]::before {
+  content: attr(placeholder) ":";
+  white-space: pre;
+  color: black;
+  opacity: 0.5;
 }
 
 /*mediaquery*/
@@ -322,7 +345,7 @@ h2 span:last-of-type {
   }
 
   .absol {
-    font-size: 10px;
+    font-size: 10px !important;
   }
 }
 @media (min-width: 552px) and (max-width: 768px) {
