--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -185,8 +185,23 @@ h2
 .btnftr
     border: solid 1px gainsboro!important
 /*fin*/
+/*ajout derniere minute*/
 #margright
     margin: 10px!important
+input[type="date"]
+    color: white
+input[type="date"]::before
+   content: attr(placeholder)" : "
+   white-space: pre
+   color: black
+   opacity: 0.5
+input[type="time"]
+    color: white
+input[type="time"]::before
+   content: attr(placeholder)" : "
+   white-space: pre
+   color: black
+   opacity: 0.5
 /*mediaquery*/
 @media (max-width:552px)
     body 
